<resources>
    <string name="app_name">MultiComponents</string>
    <string name="filtertitle">Filtros</string>
    <string name="filterMause">Ratones</string>
    <string name="filterKayboard">Teclados</string>
    <string name="filterScreen">Monitores</string>
    <string name="filterBase">Placas Base</string>
    <string name="filterProcesser">Procesadores</string>
    <string name="filterRam">Memoria Ram</string>
    <string name="filterLaptop">Portatiles</string>
    <string name="filterHardware">Torres</string>
    <string name="filterCharger">Fuentes de Alimentación</string>


    <string name="labelName">Nombres:</string>
    <string name="labelSurname">Apellidos:</string>
    <string name="labelEmail">Email:</string>
    <string name="labelDatos">Datos:</string>
    <string name="labelPhone">Teléfono:</string>
    <string name="labelProvincia">Provincia:</string>
    <string name="labelCity">Municipio:</string>
    <string name="labelAddress">Dirección:</string>
    <string name="save">Guardar</string>
    <string name="pass">Contraseña (debe contener mín. 6 caracteres):</string>

    <string name="home">Home</string>
    <string name="carrito">Cesta</string>
    <string name="facturas">Facturas</string>
    <string name="usuarioconfig">Configuración de Usuario</string>
    <string name="politicapriv">Política de privacidad</string>

    <string name="nombreempresa">Multicomponents S.L.</string>
    <string name="cif">CIF: V41844986</string>
    <string name="tel">Tlf: 975778539</string>
    <string name="email">multicomponents.sl@gmail.com</string>
    <string name="dirf">C/ Gustavo Adolfo Bécquer n123</string>

    <string name="labelComp">Componente</string>
    <string name="labelSinIva">Sin Iva</string>
    <string name="labelIva">Iva:21%</string>

    <string name="forgot">¿Ha olvidado su contraseña?</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="another_log">Otro incio de sesión:</string>
    <string name="register">Registrarse</string>
    <string name="npass">Nueva Contraseña</string>
    <string name="rpass">Repetir Contraseña</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cambio de vista</string>

    <string name="menu_home">Home</string>
    <string name="menu_fav">Favoritos</string>
    <string name="menu_carrito">Carrito</string>
    <string name="menu_facturas">Facturas</string>
    <string name="menu_userconf">Usuario</string>
    <string name="menu_about_us">Acerca de nosotros</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string-array name="componentes">
        <item>Ratón</item>
        <item>Teclado</item>
        <item>Monitor</item>
        <item>RAM</item>
        <item>Procesador</item>
        <item>Torre</item>
        <item>Placa base</item>
        <item>Portátil</item>
        <item>Fuente de alimentación</item>
    </string-array>

    <string-array name="unidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer_victor">NavigationDrawerActivityVictor</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>