<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.Login" android:orientation="vertical" android:gravity="center"
>

    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvLabelMultiComponents" android:textAlignment="center"
            android:textStyle="bold" android:textSize="34sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp" android:gravity="center"
            android:paddingRight="40dp">
        <TextView
                android:text="@string/labelEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/tvLabelEmailLogin"
                android:textAlignment="viewEnd" android:textSize="20sp" android:paddingRight="10dp"
                android:layout_weight="0.4"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etEmailLogin"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" android:layout_weight="0.6"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center" android:paddingRight="40dp"
            android:layout_marginTop="20dp">
        <TextView
                android:text="@string/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/tvLabelPasswordLogin" android:textAlignment="viewEnd"
                android:textSize="20sp" android:paddingRight="10dp" android:layout_weight="0.4"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPasswordLogin" tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:layout_weight="0.6"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvOlvideContraseña" android:text="@string/forgot"
            android:textAlignment="center" android:layout_marginTop="30dp" android:clickable="true"
            tools:ignore="TouchTargetSizeCheck" android:onClick="olvideContraseña"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnLogin" android:text="@string/log_in"
                android:textSize="14sp" android:layout_marginRight="5dp" android:onClick="iniciarSesión"/>
        <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnRegistrarse" android:textSize="14sp"
                android:layout_marginLeft="5dp" android:onClick="registrarse"/>
    </LinearLayout>
    <TextView
            android:text="@string/another_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvLabelOtherLogin" android:textAlignment="center"
            android:textSize="16sp" android:layout_marginTop="20dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnGoogleLogin"
            android:drawableLeft="@drawable/google"
            android:layout_marginTop="10dp" android:text="GOOGLE" android:textSize="20sp"
            android:backgroundTint="#80D8FF"/>
</LinearLayout>