<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/buscador"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lupa"
            android:inputType="text"
            />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
 >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbFavoritos"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:cursorVisible="false"
                android:button="@drawable/corazon_relleno"
                android:checked="false"/>
            <Switch
                android:text="Filtros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sFiltros" android:textAlignment="center"
                android:checked="false" android:showText="false"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/llFiltros">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
                <CheckBox
                    android:text="@string/filterMause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbRatones"
                    app:centerIfNoTextEnabled="false" android:onClick="checked"/>
                <CheckBox
                    android:text="@string/filterKayboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbTeclados" android:onClick="checked"/>
                <CheckBox
                    android:text="@string/filterScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbMonitores" android:onClick="checked"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
                <CheckBox
                    android:text="@string/filterProcesser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbProcesadores" android:onClick="checked"/>
                <CheckBox
                    android:text="@string/filterBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbPlacasBase" android:onClick="checked"/>
                <CheckBox
                    android:text="@string/filterRam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbRam" android:onClick="checked"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:text="@string/filterLaptop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbPortatiles" android:onClick="checked"/>
                <CheckBox
                    android:text="@string/filterHardware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbTorres" android:onClick="checked"/>
                <CheckBox
                    android:text="@string/filterCharger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chbFAliment" android:onClick="checked"/>
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/list_item_componentes"
            android:id="@+id/lvComponentesHome"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <ListView
        android:id="@+id/lvComponentesConImagenHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_item_componentes_con_imagen"
        />

    <GridView
        android:id="@+id/gvComponentesConImagenHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_main_drawer"
        app:headerLayout="@layout/nav_header_navigation_drawer"
        />

</androidx.drawerlayout.widget.DrawerLayout>