<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.OlvideContrasenia" android:orientation="vertical" android:gravity="center"
        android:padding="10dp">

    <TextView
            android:text="@string/npass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvLabelFP"/>
    <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etFP" android:layout_marginBottom="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvLabelFP2" android:text="@string/rpass"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etFP2" android:layout_marginBottom="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
    <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnCambiar"
            android:onClick="comprobarNuevaContrasenia"/>
</LinearLayout>